начал делать каркас разметки проекта early birds coffee

--- a/early_birds_coffee/index.html
+++ b/early_birds_coffee/index.html
@@ -3,7 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Early Birds Coffee</title>
+    <link rel="stylesheet" href="./styles/styles.css" />
   </head>
-  <body></body>
+  <body class="page">
+    <h1 class="visually-hidden">Early Birds Coffee</h1>
+    <header class="header"></header>
+    <main>
+      <section class="intro"></section>
+      <section class="more"></section>
+      <section class="shops"></section>
+      <section class="coffee"></section>
+      <section class="services"></section>
+      <section class="reserve"></section>
+      <section class="team"></section>
+      <section class="blog"></section>
+      <section class="school"></section>
+      <section class="supplies"></section>
+      <section class="our-coffee"></section>
+      <section class="gallery"></section>
+    </main>
+    <footer class="footer"></footer>
+  </body>
 </html>
