начал делать каркас разметки остальных проектов

--- a/allsmiles_dentist_home/index.html
+++ b/allsmiles_dentist_home/index.html
@@ -3,7 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>AllSmiles Dentist Home</title>
+    <link rel="stylesheet" href="./styles/styles.css" />
   </head>
-  <body></body>
+  <body class="page">
+    <h1 class="visually-hidden">AllSmiles Dentist Home</h1>
+    <header class="header"></header>
+    <main>
+      <section class="intro"></section>
+      <section class="about"></section>
+      <section class="practice"></section>
+      <section class="clients"></section>
+      <section class="banner"></section>
+      <section class="services"></section>
+      <section class="team"></section>
+      <section class="request"></section>
+      <section class="news"></section>
+      <section class="partners"></section>
+    </main>
+    <footer class="footer"></footer>
+  </body>
 </html>
