--- a/henrik_magazine/index.html
+++ b/henrik_magazine/index.html
@@ -3,7 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>HENRIK IS A DESIGN MAGAZINE</title>
+    <link rel="stylesheet" href="./styles/styles.css" />
   </head>
-  <body></body>
+  <body class="page">
+    <h1 class="visually-hidden">HENRIK IS A DESIGN MAGAZINE</h1>
+    <header class="header"></header>
+    <main>
+      <section class="top"></section>
+      <section class="latest-posts"></section>
+      <section class="popular"></section>
+      <section class="top2"></section>
+      <section class="hot-stuff"></section>
+      <section class="running-string"></section>
+    </main>
+    <footer class="footer"></footer>
+  </body>
 </html>
