--- a/resonator_podcast/index.html
+++ b/resonator_podcast/index.html
@@ -3,7 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Resonator Podcast</title>
+    <link rel="stylesheet" href="./styles/styles.css" />
   </head>
-  <body></body>
+  <body class="page">
+    <h1 class="visually-hidden">Resonator Podcast</h1>
+    <header class="header"></header>
+    <main>
+      <section class="new"></section>
+      <section class="last"></section>
+      <section class="top"></section>
+      <section class="essential"></section>
+      <section class="video"></section>
+      <section class="hosts"></section>
+    </main>
+    <footer class="footer"></footer>
+  </body>
 </html>
