--- a/corsea_e-commerce/index.html
+++ b/corsea_e-commerce/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./styles/styles.css" />
   </head>
-  <body></body>
+  <body class="page">
+    <h1 class="visually-hidden"></h1>
+    <header class="header"></header>
+    <main></main>
+    <footer class="footer"></footer>
+  </body>
 </html>
