--- a/corsea_e-commerce/index.html
+++ b/corsea_e-commerce/index.html
@@ -3,13 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Corsea Textiles Shop</title>
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body class="page">
-    <h1 class="visually-hidden"></h1>
+    <h1 class="visually-hidden">Corsea Textiles Shop</h1>
     <header class="header"></header>
-    <main></main>
+    <main>
+      <section class="collections"></section>
+      <section class="catalog"></section>
+      <section class="genders"></section>
+      <section class="brands"></section>
+      <section class="top-brand"></section>
+      <section class="blog"></section>
+      <section class="sign-up"></section>
+      <section class="artists"></section>
+      <section class="gallery"></section>
+      <section class="advantages"></section>
+    </main>
     <footer class="footer"></footer>
   </body>
 </html>
