--- a/hiroshi_architecture_home/index.html
+++ b/hiroshi_architecture_home/index.html
@@ -3,13 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Hiroshi Architects</title>
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body class="page">
-    <h1 class="visually-hidden"></h1>
+    <h1 class="visually-hidden">Hiroshi Architects</h1>
     <header class="header"></header>
-    <main></main>
+    <main>
+      <section class="intro"></section>
+      <section class="about"></section>
+      <section class="works"></section>
+      <section class="articles"></section>
+      <section class="team"></section>
+      <section class="mission"></section>
+      <section class="portfolio"></section>
+      <section class="contact-us"></section>
+    </main>
     <footer class="footer"></footer>
   </body>
 </html>
