небольшие правки в проекте allsmiles

--- a/allsmiles_dentist_home/index.html
+++ b/allsmiles_dentist_home/index.html
@@ -93,15 +93,32 @@
           </div>
           <div class="about__work-shedule">
             <h3 class="about__work-shedule-title"></h3>
-            <ul class="about__work-shedule-list">
-              <li class="about__work-shedule-item"></li>
-              <li class="about__work-shedule-item"></li>
-              <li class="about__work-shedule-item"></li>
-              <li class="about__work-shedule-item"></li>
-              <li class="about__work-shedule-item"></li>
-              <li class="about__work-shedule-item"></li>
-              <li class="about__work-shedule-item"></li>
-            </ul>
+            <dl class="about__work-shedule-list">
+              <div class="about__work-shedule-item">
+                <dt class="about__work-shedule-key"></dt>
+                <dd class="about__work-shedule-value"></dd>
+              </div>
+              <div class="about__work-shedule-item">
+                <dt class="about__work-shedule-key"></dt>
+                <dd class="about__work-shedule-value"></dd>
+              </div>
+              <div class="about__work-shedule-item">
+                <dt class="about__work-shedule-key"></dt>
+                <dd class="about__work-shedule-value"></dd>
+              </div>
+              <div class="about__work-shedule-item">
+                <dt class="about__work-shedule-key"></dt>
+                <dd class="about__work-shedule-value"></dd>
+              </div>
+              <div class="about__work-shedule-item">
+                <dt class="about__work-shedule-key"></dt>
+                <dd class="about__work-shedule-value"></dd>
+              </div>
+              <div class="about__work-shedule-item">
+                <dt class="about__work-shedule-key"></dt>
+                <dd class="about__work-shedule-value"></dd>
+              </div>
+            </dl>
             <p class="about__call-us">
               <a href="tel:" class="about__call-us-phone"></a>
             </p>
